[tool.poetry]
name = "stomppy"
version = "0.1.0"
description = ""
authors = ["Hugo Brilhante <hugobrilhante@gmail.com>"]
readme = "README.md"
packages = [{include = "stomppy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "src/**/*.py", "test/**/*.py"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "PL"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
